fix(search): #2370 change color menu-button mobile view

--- a/applications/search/src/app/app-nav-bar/app-nav-bar.scss
+++ b/applications/search/src/app/app-nav-bar/app-nav-bar.scss
@@ -8,6 +8,12 @@
       }
     }
   }
+  .fdk-button-menu {
+    @include themify($themes) {
+      background-color: themed('color-button-primary-1');
+      color: themed('color-button-text-primary');
+    }
+  }
 }
 
 .fdk-button-lang {
